--- a/index.html
+++ b/index.html
@@ -327,26 +327,26 @@ ul.nav.nav-tabs.fl li .fa-user:before,.fa-user-plus:before,.fr.co,.fl.mini.u-co{
    <div class="midd" style="width: 312px; height: 553px">
      <div class="room">
         <p><font color="#000000">شات درر السعودية اكبر دردشة سعودية وشات سعودي عربي يجمع بين العرب ودردشات الخليج</font></p>
-        <a href="http://chat-iraq.com">
+        <a href="https://iraqia-chat.com/saudi">
 		<span style="color: #FFFFFF; font-family: Segoe UI; font-weight: 400; text-decoration: none; background-color: #2F2F2F; background-position: 0% 0%">
 		شات درر السعوديه</span></a></div><div class="room">
         <p><font color="#000000">مرحباً بكم في دردشة وشات الامارات العربية المتحدة نتمنى لكم قضاء وقت ممتع في دردشة درر الامارات</font></p>
         <p>
-		<a style="display: table; color: #fff; border-radius: 5px; font-style: normal; font-variant: normal; font-weight: normal; font-size: 18px; font-family: Segoe UI; text-decoration: none; margin-left: auto; margin-right: auto; margin-top: 10px; margin-bottom: 5px; padding-left: 5px; padding-right: 5px; padding-top: 3px; padding-bottom: 3px; background: #2F2F2F; " href="http://chat-iraq.com">
+		<a style="display: table; color: #fff; border-radius: 5px; font-style: normal; font-variant: normal; font-weight: normal; font-size: 18px; font-family: Segoe UI; text-decoration: none; margin-left: auto; margin-right: auto; margin-top: 10px; margin-bottom: 5px; padding-left: 5px; padding-right: 5px; padding-top: 3px; padding-bottom: 3px; background: #2F2F2F; " href="https://iraqia-chat.com/emirates">
 		شات درر الامارات</a>
        </p></div><div class="room">
         <p><font color="#000000">شات درر اليمن السعيد و دردشة اليمن وشات يمن دردشة عدن</font></p>
-        <a href="http://chat-iraq.com">
+        <a href="https://iraqia-chat.com/yemen">
 		<span style="color: #FFFFFF; font-family: Segoe UI; font-weight: 400; text-decoration: none; background-color: #2F2F2F; background-position: 0% 0%">
 		شات درر اليمن</span></a>
        </div><div class="room">
         <p><font color="#000000">شات درر مصر دردشة درر مصرية شات مصر دردشة مصرية كتابية شات مصري</font></p>
 		<p>
 		<span style="background-color: #2F2F2F; background-position: 0% 0%">
-		<a href="http://chat-iraq.com"><font color="#FFFFFF">شات درر مصر</font></a></span></p>
+		<a href="https://iraqia-chat.com/egypt"><font color="#FFFFFF">شات درر مصر</font></a></span></p>
        </div><div class="room">
         <p><font color="#000000">شات درر الكويت شات درر كويتي دردشة كويتية شات كويتي دردشة درر الكويت</font></p>
-        <a href="http://chat-iraq.com">
+        <a href="https://iraqia-chat.com/kuwait">
 		<span style="color: #FFFFFF; font-family: Segoe UI; font-weight: 400; background-color: #2F2F2F; background-position: 0% 0%">
 		شات درر الكويت</span></a>
        </div><div class="room">
@@ -354,13 +354,13 @@ ul.nav.nav-tabs.fl li .fa-user:before,.fa-user-plus:before,.fr.co,.fl.mini.u-co{
 		<font color="#FFFFFF">
 		<span style="font-family: Segoe UI; font-weight: 400; background-color: #2F2F2F; background-position: 0% 0%">
 		شات </span></font>
-		<a href="http://chat-iraq.com">
+		<a href="https://iraqia-chat.com/algeria">
 		<span style="color: #FFFFFF; font-family: Segoe UI; font-weight: 400; background-color: #2F2F2F; background-position: 0% 0%">
 		درر الجزائر</span></a><p><font color="#000000">شات درر فلسطين&nbsp; للجوال أفضل دردشة فلسطينيه تواصل مع اصدقاء من مختلف أنحاء المناطق فلسطين و الدردشه درر</font></p>
 		<font color="#FFFFFF">
 		<span style="font-family: Segoe UI; font-weight: 400; background-color: #2F2F2F; background-position: 0% 0%">
 		شات </span></font>
-		<a href="http://chat-iraq.com">
+		<a href="https://iraqia-chat.com/palestine">
 		<span style="color: #FFFFFF; font-family: Segoe UI; font-weight: 400; background-color: #2F2F2F; background-position: 0% 0%">
 		درر فلسطين</span></a></div>
     </div>
