--- a/chatiraq/index.html
+++ b/chatiraq/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta property="og:title" content="شات درر العرب دردشة درر العرب شات درر العراق دردشة درر العراق شات العراق">
+  <meta property="og:title" content="شات العراق الصوتي | دردشة العراق | شات عراقي | Chat Iraq | جات العراق">
   <meta property="og:type" content="article" />
-  <meta property="og:url" content="https://iraqia-chat.com"/>
+  <meta property="og:url" content="https://www.chat-iraq.com/chatiraq/"/>
   <meta property="og:image" content="chat-iraq.jpg" />
-  <meta property="og:description" content="شات درر العرب,دردشة درر العرب,شات درر العراق,دردشة درر العراق,شات العراق,درر العرب,شات عراقية,شات غالي,شات بنوتة بغداد,شات عراقي,دردشة عراقنا,شات درر,دردشة درر,شات سهرات,شات عراق الرومانسيه,سكر دردشه,شات لحن,شات لودو,شات لوز وسكر,شات لوز,شات سكر,شات بنوتات,شات سهرات العرب,شات فراشه العراق,شات ميوزك,شات صحار الكتابي,درر عرب,عرب جات,www.iraqiachat.com,صور درر,شات اوتار العرب,شات در,شات ميوزك هوست,iraqia chat,هناي العرب,شات جمر,شات فهاوه,صور شات,جات العرب,شات العراب,بنات شات,iraqiachat.com,دار العراق,محادثات عراقية,صور بنات شات,صور دردشه,dirarab,شات فراشات بغداد,العراق يرحب بكم,شات بنات عسل,دوك موبايل,شات اسياد العرب,شات صبايا سكر,شات موبايل هوست,شات صقور العرب,شات كتابي بنات">
+  <meta property="og:description" content="شات العراق تعرف على اصدقاء شباب وبنات عراقيون واستمتع بالدردشة الجماعية أو بدء محادثة خاصّة غرفة دردشة عراقية بدون تسجيل أو اشتراك مجانًا">
   <meta name="google" value="notranslate">
   <meta name="HandheldFriendly" content="True">
   <meta name="viewport" content=" user-scalable=0, width=device-width">
@@ -18,15 +18,15 @@
  <link rel="icon" type="image/x-icon" href="favicon.ico">
  <link rel="shortcut icon" type="image/png" href="favicon.ico" />
 <link rel="apple-touch-icon" href="favicon.ico" />
-<link rel="canonical" href="https://iraqia-chat.com"/>
+<link rel="canonical" href="https://www.chat-iraq.com/chatiraq/"/>
 		<meta name="google" value="notranslate">
 		<meta name="HandheldFriendly" content="True">
 		<meta name="viewport" content=" user-scalable=0, width=device-width">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="mobile-web-app-capable" content="yes">
-		<title>شات درر العرب دردشة درر العرب شات درر العراق دردشة درر العراق شات العراق</title>
-        <meta name="description" content="شات درر العرب,دردشة درر العرب,شات درر العراق,دردشة درر العراق,شات العراق,درر العرب,شات عراقية,شات غالي,شات بنوتة بغداد,شات عراقي,دردشة عراقنا,شات درر,دردشة درر,شات سهرات,شات عراق الرومانسيه,سكر دردشه,شات لحن,شات لودو,شات لوز وسكر,شات لوز,شات سكر,شات بنوتات,شات سهرات العرب,شات فراشه العراق,شات ميوزك,شات صحار الكتابي,درر عرب,عرب جات,www.iraqiachat.com,صور درر,شات اوتار العرب,شات در,شات ميوزك هوست,iraqia chat,هناي العرب,شات جمر,شات فهاوه,صور شات,جات العرب,شات العراب,بنات شات,iraqiachat.com,دار العراق,محادثات عراقية,صور بنات شات,صور دردشه,dirarab,شات فراشات بغداد,العراق يرحب بكم,شات بنات عسل,دوك موبايل,شات اسياد العرب,شات صبايا سكر,شات موبايل هوست,شات صقور العرب,شات كتابي بنات">
-        <meta content="شات درر العرب,دردشة درر العرب,شات درر العراق,دردشة درر العراق,شات العراق,درر العرب,شات عراقية,شات غالي,شات بنوتة بغداد,شات عراقي,دردشة عراقنا,شات درر,دردشة درر,شات سهرات,شات عراق الرومانسيه,سكر دردشه,شات لحن,شات لودو,شات لوز وسكر,شات لوز,شات سكر,شات بنوتات,شات سهرات العرب,شات فراشه العراق,شات ميوزك,شات صحار الكتابي,درر عرب,عرب جات,www.iraqiachat.com,صور درر,شات اوتار العرب,شات در,شات ميوزك هوست,iraqia chat,هناي العرب,شات جمر,شات فهاوه,صور شات,جات العرب,شات العراب,بنات شات,iraqiachat.com,دار العراق,محادثات عراقية,صور بنات شات,صور دردشه,dirarab,شات فراشات بغداد,العراق يرحب بكم,شات بنات عسل,دوك موبايل,شات اسياد العرب,شات صبايا سكر,شات موبايل هوست,شات صقور العرب,شات كتابي بنات" name="keywords">
+		<title>شات العراق الصوتي | دردشة العراق | شات عراقي | Chat Iraq | جات العراق</title>
+        <meta name="description" content="شات العراق تعرف على اصدقاء شباب وبنات عراقيون واستمتع بالدردشة الجماعية أو بدء محادثة خاصّة غرفة دردشة عراقية بدون تسجيل أو اشتراك مجانًا">
+        <meta content="جات العراق,دردشة العراق,شات العراق,شات صوتي,دردشة صوتي,شات عراقي,Chat iraq,iraqi chat,شات للجوال" name="keywords">
 		
          <script>
     window.port=1055
@@ -259,12 +259,12 @@ ul.nav.nav-tabs.fl li .fa-user:before,.fa-user-plus:before,.fr.co,.fl.mini.u-co{
     <div id="tlogins" class="border corner light fr break" style="z-index: 1000; position: absolute; : -4px; height: 100%; top: 0px; width: 100%; max-width: 390px; ">
         ‎<ul class="nav  nav-tabs fl" style="margin-bottom: 0px; background-color: whitesmoke; width: 100%;"> 
  <li class="active"><a target="_blank" href="https://www.facebook.com/chatiraqi">
-	دردشة درر العرب</a></li>
+	شات العراق فيس بوك</a></li>
 		        <li class="active">	<a style="font-weight: 700; padding-left: 8px; padding-right: 8px; padding-top: 10px; padding-bottom: 10px" class="fa fa-user-plus" target="_blank" href="https://www.instagram.com/chatiraqi/">
-				شات درر العرب</a></li>
+				شات العراق انستغرام</a></li>
 	        <li class="active">
 		<a style="font-weight: 600; padding-left: 8px; padding-right: 8px; padding-top: 10px; padding-bottom: 10px" class="fa fa-user-plus" target="_blank" href="http://chat-iraq.com">
-		درر العرب</a></li>
+		دردشة العراق</a></li>
       </ul>
       <form name="jump">
 <p> 
@@ -277,24 +277,24 @@ ul.nav.nav-tabs.fl li .fa-user:before,.fa-user-plus:before,.fr.co,.fl.mini.u-co{
 		<p align="center">
 <a href="https://iraqia-chat.com"><font color="#FF0000"><font size="5"><h1>دخول </font>
 <font size="5">الشات</font><font size="5"> مع </font><font size="5">شات</font><font size="5"> 
-درر العرب </font><font size="5">اضغظ</font><font size="5"> أسفل </font></font></a>
+العراق </font><font size="5">اضغظ</font><font size="5"> أسفل </font></font></a>
 </h1></p>
 		<p align="center">
-<a target="_blank" title="شات درر" href="https://iraqia-chat.com/"><img src="chat-iraq.jpg" border="0" alt="شات درر العرب" width="281" height="40"></a></p>
+<a target="_blank" title="شات درر" href="https://iraqia-chat.com/"><img src="chat-iraq.jpg" border="0" alt="شات العراق" width="281" height="40"></a></p>
 		<p align="center">
 <a href="https://iraqia-chat.com"><font color="#FF0000"><font size="6"><h2>دخول </font>
 <font size="5"><font size="6">الدردشة</font></font><font size="6"> مع </font>
 <font size="5"><font size="6">جات</font><font size="6"> </font><font size="6">
-درر العرب</font><font size="6"> </font><font size="6">أضغظ</font><font size="6"> 
+العراق</font><font size="6"> </font><font size="6">أضغظ</font><font size="6"> 
 أسفل</font></font></font></a></h2></p>
 		<p align="center">
-&nbsp;<a target="_blank" title="شات درر العرب" href="https://chat-iraq.com"><img src="chat-iraq.jpg" border="0" alt="دردشة درر العرب" width="281" height="40"></a>
+&nbsp;<a target="_blank" title="شات العراق" href="https://chat-iraq.com"><img src="chat-iraq.jpg" border="0" alt="دردشة العراق" width="281" height="40"></a>
 </p>
 		
 <p align="center">
 
-<h1 class="hid">شات درر العرب دردشة درر العرب شات درر العراق دردشة درر العراق شات العراق</h1>
-<font color="#FF0000">موقع درر العرب : يرحب بالزوار الكرام ويتمنى لكم الخير والسعادة</font>
+<h1 class="hid">جات العراق,دردشة العراق,شات العراق,شات صوتي,دردشة صوتي,شات عراقي,Chat iraq,iraqi chat</h1>
+<font color="#FF0000">موقع العراق | دردشة العراق الرسمي : مع تمنياتنا للجميع بالخير </font>
 </p>
 <p align="center">
 
@@ -326,46 +326,46 @@ ul.nav.nav-tabs.fl li .fa-user:before,.fa-user-plus:before,.fr.co,.fl.mini.u-co{
    </div>
    <div class="midd" style="width: 312px; height: 553px">
      <div class="room">
-        <p><font color="#000000">شات درر السعودية اكبر دردشة سعودية وشات سعودي عربي يجمع بين العرب ودردشات الخليج</font></p>
-        <a href="https://iraqia-chat.com/saudi">
+        <p><font color="#000000">شات العراق سعودي يمكنك التواصل و الدردشة مباشرة مع أهل السعودية اكبر شات و دردشة العراق سعودي </font></p>
+        <a href="http://chat-iraq.com">
 		<span style="color: #FFFFFF; font-family: Segoe UI; font-weight: 400; text-decoration: none; background-color: #2F2F2F; background-position: 0% 0%">
-		شات درر السعوديه</span></a></div><div class="room">
-        <p><font color="#000000">مرحباً بكم في دردشة وشات الامارات العربية المتحدة نتمنى لكم قضاء وقت ممتع في دردشة درر الامارات</font></p>
+		شات العراق السعوديه</span></a></div><div class="room">
+        <p><font color="#000000">مرحبا بكم في الدردشة المفضله العراق مع أهل الامارات أكبر شات العراق اماراتي </font></p>
         <p>
-		<a style="display: table; color: #fff; border-radius: 5px; font-style: normal; font-variant: normal; font-weight: normal; font-size: 18px; font-family: Segoe UI; text-decoration: none; margin-left: auto; margin-right: auto; margin-top: 10px; margin-bottom: 5px; padding-left: 5px; padding-right: 5px; padding-top: 3px; padding-bottom: 3px; background: #2F2F2F; " href="https://iraqia-chat.com/emirates">
-		شات درر الامارات</a>
+		<a style="display: table; color: #fff; border-radius: 5px; font-style: normal; font-variant: normal; font-weight: normal; font-size: 18px; font-family: Segoe UI; text-decoration: none; margin-left: auto; margin-right: auto; margin-top: 10px; margin-bottom: 5px; padding-left: 5px; padding-right: 5px; padding-top: 3px; padding-bottom: 3px; background: #2F2F2F; " href="http://chat-iraq.com">
+		شات العراق الامارات</a>
        </p></div><div class="room">
-        <p><font color="#000000">شات درر اليمن السعيد و دردشة اليمن وشات يمن دردشة عدن</font></p>
-        <a href="https://iraqia-chat.com/yemen">
+        <p><font color="#000000">غرفة دردشة العراق اليمن أكبر تجميع يمني العراق و الدردشة و العراق مع أبناء اليمن السعيد</font></p>
+        <a href="http://chat-iraq.com">
 		<span style="color: #FFFFFF; font-family: Segoe UI; font-weight: 400; text-decoration: none; background-color: #2F2F2F; background-position: 0% 0%">
-		شات درر اليمن</span></a>
+		شات العراق اليمن</span></a>
        </div><div class="room">
-        <p><font color="#000000">شات درر مصر دردشة درر مصرية شات مصر دردشة مصرية كتابية شات مصري</font></p>
+        <p><font color="#000000">مرحبا بأهلنا في مصر يمكنكم الدردشة و العراق صوت و صورة و ايضاً دردشه فيديو و دردشة العراق كتابية مصرية </font></p>
 		<p>
 		<span style="background-color: #2F2F2F; background-position: 0% 0%">
-		<a href="https://iraqia-chat.com/egypt"><font color="#FFFFFF">شات درر مصر</font></a></span></p>
+		<a href="http://chat-iraq.com"><font color="#FFFFFF">شات العراق مصري</font></a></span></p>
        </div><div class="room">
-        <p><font color="#000000">شات درر الكويت شات درر كويتي دردشة كويتية شات كويتي دردشة درر الكويت</font></p>
-        <a href="https://iraqia-chat.com/kuwait">
+        <p><font color="#000000">شات و دردشة العراق كويتية لأهلنا في الكويت العراق مع افضل دردشة العراق كويتيه </font></p>
+        <a href="http://chat-iraq.com">
 		<span style="color: #FFFFFF; font-family: Segoe UI; font-weight: 400; background-color: #2F2F2F; background-position: 0% 0%">
-		شات درر الكويت</span></a>
+		شات العراق كويتي</span></a>
        </div><div class="room">
-        <p><font color="#000000">شات درر جزائري للجوال أفضل دردشة جزائريه تواصل مع اصدقاء من مختلف أنحاء المناطق الجزائرية و الدردشه درر </font></p>
+        <p><font color="#000000">شات العراق جزائري للجوال أفضل دردشة جزائريه تواصل مع اصدقاء من مختلف أنحاء المناطق الجزائرية و الدردشه العراق </font></p>
 		<font color="#FFFFFF">
 		<span style="font-family: Segoe UI; font-weight: 400; background-color: #2F2F2F; background-position: 0% 0%">
 		شات </span></font>
-		<a href="https://iraqia-chat.com/algeria">
+		<a href="http://chat-iraq.com">
 		<span style="color: #FFFFFF; font-family: Segoe UI; font-weight: 400; background-color: #2F2F2F; background-position: 0% 0%">
-		درر الجزائر</span></a><p><font color="#000000">شات درر فلسطين&nbsp; للجوال أفضل دردشة فلسطينيه تواصل مع اصدقاء من مختلف أنحاء المناطق فلسطين و الدردشه درر</font></p>
+		العراق الجزائر</span></a><p><font color="#000000">شات العراق فلسطين&nbsp; للجوال أفضل دردشة فلسطينيه تواصل مع اصدقاء من مختلف أنحاء المناطق فلسطين و الدردشه العراق</font></p>
 		<font color="#FFFFFF">
 		<span style="font-family: Segoe UI; font-weight: 400; background-color: #2F2F2F; background-position: 0% 0%">
 		شات </span></font>
-		<a href="https://iraqia-chat.com/palestine">
+		<a href="http://chat-iraq.com">
 		<span style="color: #FFFFFF; font-family: Segoe UI; font-weight: 400; background-color: #2F2F2F; background-position: 0% 0%">
-		درر فلسطين</span></a></div>
+		العراق فلسطين</span></a></div>
     </div>
-  </div><p align="center"><a href="http://iraqia-chat.com/" rel="dofollow">شات درر للجوال</a></p>
-		<p align="center"><font color="#000000">شات و دردشة درر تتمنى لكم قضاء أجمل الأوقات <a href="https://chat-iraq.com" rel="dofollow">
+  </div><p align="center"><a href="https://www.chat-iraq.com/chatiraq" rel="dofollow">شات العراق للجوال</a></p>
+		<p align="center"><font color="#000000">شات و دردشة العراق تتمنى لكم قضاء أجمل الأوقات <a href="https://chat-iraq.com" rel="dofollow">
 		شات كتابي</a></font></p>
 		<p align="center"><a href="http://chat-iraq.com"><font color="#000000">
 		عسل تايم</font></a></p>
@@ -373,17 +373,17 @@ ul.nav.nav-tabs.fl li .fa-user:before,.fa-user-plus:before,.fr.co,.fl.mini.u-co{
 		درر العراق</font></a></p>
 		<p align="center"><a href="http://iraqia-chat.com/"><font color="#000000">
 		درر العرب</font></a></p>
-		<p align="center"><a href="http://iraqia-chat.com/"><font color="#000000">
-		درر العرب لخدمات السيو</font></a></p>
-		<p align="center"><a href="http://iraqia-chat.com/"><font color="#000000">
+		<p align="center"><a href="https://imetze.com/"><font color="#000000">
+		العراق لخدمات السيو</font></a></p>
+		<p align="center"><a href="https://www.iraqi1.net/"><font color="#000000">
 		شات عراقي نت</span></font></a></p>
 		<p align="center"><a href="https://iraq4net.com/"><font color="#000000">
 		عراق فور نت</font></a></p>
 		<p align="center"><a href="https://www.chat-iraq.com/iraqya/"><font color="#000000">
 		شات مقهى العراق</font></a></p>
-		<p align="center"><a href="http://iraqia-chat.com/"><font color="#000000">
-		منتديات درر العرب</font></a></p>
-		<p align="center"><font color="#000000"><span lang="en-us">درر العرب</span> 
+		<p align="center"><a href="https://www.iraqena.net/"><font color="#000000">
+		منتديات عراقنا</font></a></p>
+		<p align="center"><font color="#000000"><span lang="en-us">العراق</span> 
 		| صاحب المواقع</font></p>
 		<p align="center">&nbsp;</p>
 		<p align="center"></p></td>
